# yeehaw

./: .gitattributes  .gitignore  Project.toml  README.md  pyproject.toml
data/: batman+MH_trace.nc  exoplanet+MH_trace.nc  exoplanet+NUTS_trace.nc  generated_data.npz  generated_data_100ppm.npz  params_0.csv  simulated_data_0.fits
paper/: paper.tex  references.bib  table.tex
src/: batman+MH.ipynb  comparison.ipynb  data.jl  exoplanet+MH.ipynb  exoplanet.ipynb  juliet.ipynb  ops.py  pytransit+MH.ipynb  transits+NS.jl  transits+NUTS.jl
src/exofast/: fake.priors  fitfake.pro  idltocsv.pro
