[tool.poetry]
name = "yeehaw"
version = "0.1.0"
description = "A round-up of probabilistic transit-fitting software"
authors = ["Miles Lucas <mdlucas@hawaii.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
exoplanet = "^0.4"
numpy = "^1"
astroquery = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
